# parlador

./: Cargo.toml  README.md  SPEECH_SYNTHESIZER.md
examples/: phonemes.rs  speak.rs  streaming.rs
src/: error.rs  formant.rs  g2p.rs  lib.rs  phoneme.rs  prosody.rs  ssml.rs  streaming.rs  synthesizer.rs  voice.rs
